# pond_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pond.toml.example
deployment/: Cargo.toml
deployment/src/: config.rs  helpers.rs  lib.rs  manager.rs  manifest.rs
deployment/src/deployer/: handle.rs  mod.rs  static_site.rs
deployment/src/deployers/: handle.rs  mod.rs
deployment/src/ingress/: mod.rs
deployment/src/ingress/dns/: mod.rs
deployment/src/ingress/dns/cloudflare/: client.rs  mod.rs
deployment/src/ingress/static_site/: mod.rs  nginx.rs  static_site_nginx_template.handlebars
scripts/: static_site.sh
server/: Cargo.toml
server/src/: config.rs  main.rs  message.rs
server/src/http/: auth.rs  deployment_routes.rs
src/: auth.rs  config.rs  deployment_routes.rs  deployment_service.rs  main.rs  message.rs
src/deployment/: helpers.rs  mod.rs
src/deployment/ingress/: mod.rs
src/http/: auth.rs  deployment_routes.rs  mod.rs
src/ingress_service/: mod.rs
