[package]
name = "pond_deployment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
figment = "0.10.19"
handlebars = "6.0.0"
lazy_static = "1.5.0"
log = "0.4.22"
mockall_double = "0.3.1"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["multipart", "blocking", "rustls-tls", "json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"

[dev-dependencies]
mockall = "0.13.0"
mockito = "1.5.0"
